Fixed spacing

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ hr {
 }
 
 h1 {
-  padding-top: 5%;
+  padding-top: 5% !important;
 }
 
 #box {
